src/objects/SomTv_Angebot__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_NrNeukunden__c</fullName>
        <description>Naturalrabatt für Neukunden</description>
        <inlineHelpText>Naturalrabatt für Neukunden</inlineHelpText>
        <label>Neukunden-NR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NrSonstigeHinweis__c</fullName>
        <description>Hinweise zu sonstigen Naturalrabatten</description>
        <inlineHelpText>Hinweise zu sonstigen Naturalrabatten</inlineHelpText>
        <label>Hinweis Sonstige NR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_NrSonstige__c</fullName>
        <description>Sonstige Naturalrabatte</description>
        <inlineHelpText>Sonstige Naturalrabatte</inlineHelpText>
        <label>Sonstige NR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_OnlineInvestmentInEUR__c</fullName>
        <description>Angabe der Online Investment in Euro</description>
        <inlineHelpText>Angabe der Online Investment in Euro</inlineHelpText>
        <label>Online Investment in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_OppPhaseFormel__c</fullName>
        <description>Zeigt die aktuelle Phase der Opportunity an.</description>
        <formula>TEXT(SomTv_Opportunity__r.StageName)</formula>
        <inlineHelpText>Zeigt die aktuelle Phase der Opportunity an.</inlineHelpText>
        <label>Opp Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Opportunity__c</fullName>
        <description>Vertriebschance</description>
        <inlineHelpText>Vertriebschance</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Angebote</relationshipLabel>
        <relationshipName>Angebote</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_PrintImMediamix__c</fullName>
        <description>Anteil des Printanteils im Mediamix in %</description>
        <inlineHelpText>Anteil des Printanteils im Mediamix in %</inlineHelpText>
        <label>Print im Mediamix (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_RealisticCaseAngebot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Angebot mit der höchst bewerteten Wahrscheinlich vom Kunden angenommen zu werden</description>
        <inlineHelpText>Angebot mit der höchst bewerteten Wahrscheinlich vom Kunden angenommen zu werden</inlineHelpText>
        <label>Realistic Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_S_NR_Prozent_Taschenrechner_Netto__c</fullName>
        <description>Gibt einen Prozentwert für einen eingegebenen EUR-Wert Sonder-NR zurück</description>
        <formula>SomTv_S_NR_Taschenrechner_Netto__c/SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gibt einen Prozentwert für einen eingegebenen EUR-Wert Sonder-NR zurück</inlineHelpText>
        <label>S-NR %</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_S_NR_Prozent_Taschenrechner__c</fullName>
        <description>Gibt einen Prozentwert für einen eingegebenen EUR-Wert Sonder-NR zurück</description>
        <formula>SomTv_S_NR_Taschenrechner__c/SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gibt einen Prozentwert für einen eingegebenen EUR-Wert Sonder-NR zurück</inlineHelpText>
        <label>S-NR %</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_S_NR_Taschenrechner_Netto__c</fullName>
        <description>Eingabe eines Sonder-NR EUR-Betrages zur Ermittlung des entsprechenden Prozentsatzes</description>
        <inlineHelpText>Eingabe eines Sonder-NR EUR-Betrages zur Ermittlung des entsprechenden Prozentsatzes</inlineHelpText>
        <label>S-NR €</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_S_NR_Taschenrechner__c</fullName>
        <description>Eingabe eines Sonder-NR EUR-Betrages zur Ermittlung des entsprechenden Prozentsatzes</description>
        <inlineHelpText>Eingabe eines Sonder-NR EUR-Betrages zur Ermittlung des entsprechenden Prozentsatzes</inlineHelpText>
        <label>S-NR €</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_SkontoKopfEur__c</fullName>
        <description>Gewährung von Skonto in EUR bei Einhaltung des verkürzten Zahlungsziels</description>
        <formula>SomTv_SkontoKopf__c * SomTv_MN2_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gewährung von Skonto in EUR bei Einhaltung des verkürzten Zahlungsziels</inlineHelpText>
        <label>Skonto in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_SkontoKopf__c</fullName>
        <defaultValue>0.02</defaultValue>
        <description>Gewährung von Skonto in % bei Einhaltung des verkürzten Zahlungsziels</description>
        <inlineHelpText>Gewährung von Skonto in % bei Einhaltung des verkürzten Zahlungsziels</inlineHelpText>
        <label>Skonto (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR1Angebot__c</fullName>
        <description>Angabe des Sonder Naturalrabatt im Angebot in %</description>
        <inlineHelpText>Angabe des Sonder Naturalrabatt im Angebot in %</inlineHelpText>
        <label>Sonder-NR 1 (%) Angebot</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR1DSB_c__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 1 (%) DSB</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR1Kopf_c__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 1 (%)</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR1Kunde__c</fullName>
        <description>Sonder Naturalrabatt für Kunden in %</description>
        <inlineHelpText>Sonder Naturalrabatt für Kunden in %</inlineHelpText>
        <label>Sonder-NR 1 (%) Kunde</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR1__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 1 (%) Sales</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNR2Kopf_c__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 2 (%)</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_SonderNRRM__c</fullName>
        <description>Sonder Naturalrabatt in % von Revenue Management</description>
        <inlineHelpText>Sonder Naturalrabatt in % von Revenue Management</inlineHelpText>
        <label>Sonder-NR 1 (%) RM</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_Angebot_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR1Angebot__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 Angebot in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_DSB_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR1DSB_c__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 DSB in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_RM_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNRRM__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 RM in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_Sales_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR1__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 Sales in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_in_EUR_Kopf_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR1Kopf_c__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_1_in_EUR_Kunde_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR1Kunde__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 1 Kunde in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2DSB_c__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 2 (%) DSB</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_Angebot__c</fullName>
        <description>Sonder-Naturalrabatt im Angebot</description>
        <inlineHelpText>Sonder-Naturalrabatt im Angebot</inlineHelpText>
        <label>Sonder-NR 2 (%) Angebot</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_Angebot_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_Sonder_NR_2_Angebot__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 Angebot in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_DSB_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTV_Sonder_NR_2_RM__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 DSB in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_Kunde__c</fullName>
        <description>Sonder - Naturalrabatt 2 aus Kundensicht in %</description>
        <inlineHelpText>Sonder - Naturalrabatt 2 aus Kundensicht in %</inlineHelpText>
        <label>Sonder-NR 2 (%) Kunde</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_Kunde_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_Sonder_NR_2_Kunde__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 Kunde in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_RM_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTV_Sonder_NR_2_RM__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 RM in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2_Sales_in_EUR_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_Sonder_NR_2__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 Sales in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_2__c</fullName>
        <description>Sonder Naturalrabatt in %</description>
        <inlineHelpText>Sonder Naturalrabatt in %</inlineHelpText>
        <label>Sonder-NR 2 (%) Sales</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_kumuliert__c</fullName>
        <description>Sonder-NR kumuliert in %</description>
        <formula>SomTv_SonderNR1Kopf_c__c + SomTv_SonderNR2Kopf_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR kumuliert in %</inlineHelpText>
        <label>Sonder-NR kumuliert (%)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Sonder_NR_kumuliert_in_EUR__c</fullName>
        <description>Sonder-NR kumuliert in EUR</description>
        <formula>SomTv_Sonder_NR_1_in_EUR_Kopf_formel__c+SomTV_Sonder_NR_2_in_EUR_Kopf_formel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR kumuliert in EUR</inlineHelpText>
        <label>Sonder-NR kumuliert in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Status__c</fullName>
        <description>Aktueller Bearbeitungsstand</description>
        <inlineHelpText>Aktueller Bearbeitungsstand</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>in Bearbeitung</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rabatt freigegeben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angeboten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angenommen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abgelehnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erstellt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Stufe__c</fullName>
        <description>Auswahl der entsprchenden Angebotsstufe</description>
        <inlineHelpText>Auswahl der entsprchenden Angebotsstufe</inlineHelpText>
        <label>Stufe</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_TVMediaMix__c</fullName>
        <description>Einschätzung des Netto-TV Media Mix Anteils am Gesamt-Netto-Markt in %</description>
        <inlineHelpText>Einschätzung des Netto-TV Media Mix Anteils am Gesamt-Netto-Markt in %</inlineHelpText>
        <label>Netto TV-Media Mix, %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_TVimMediamix__c</fullName>
        <description>Anteil TV im Mediamix in %</description>
        <inlineHelpText>Anteil TV im Mediamix in %</inlineHelpText>
        <label>TV im Mediamix (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_UniverseSize__c</fullName>
        <description>SoA P7S1 und RTL (IP)</description>
        <inlineHelpText>SoA P7S1 und RTL (IP)</inlineHelpText>
        <label>Universe Size (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_UniverseSoA__c</fullName>
        <description>Universe-Share of Advertising, ist der Anteil der Brutto-Werbeinsvestitionen eines Werbungtreibenden bei Sender der P7S1 Gruppe und IP (RTL-Vermarkter) an seinen gesamten Free-TV-Brutto-Werbeinvestitionen (ink. öffentlich-rechtliche Sender) auf dem deutschen Markt im Vereinbarungszeitraum laut Nielsen S+P Werbeforschung</description>
        <inlineHelpText>Universe-Share of Advertising, ist der Anteil der Brutto-Werbeinsvestitionen eines Werbungtreibenden bei Sender der P7S1 Gruppe und IP (RTL-Vermarkter) an seinen gesamten Free-TV-Brutto-Werbeinvestitionen (ink. öffentlich-rechtliche Sender) auf dem deutsc</inlineHelpText>
        <label>Universe SoA (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldAngebot__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>SomTv_MN3Angebot__c / SomTv_MB3Angebot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield Angebot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldKopf__c</fullName>
        <description>Yield, berechnet aus MN3/MB3*100</description>
        <formula>SomTv_MN3Kopf__c / SomTv_MB3Kopf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3*100</inlineHelpText>
        <label>Yield (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_Angebot_Bruttoermittlung__c</fullName>
        <formula>SomTv_MN3_Bruttoermittlung__c/SomTv_MB3_Angebot_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Angebot (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_Bruttoermittlung__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>SomTv_MN3_Bruttoermittlung__c / SomTv_MB3_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_DSB_Sicht__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>(1- SomTv_BRIST__c)*(1-SomTv_AEKopf_c__c)*(1-SomTv_SkontoKopf__c)/(1 + SomTv_NR_DSB__c+ SomTv_SonderNR1DSB_c__c+ SomTv_Sonder_NR_2DSB_c__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield DSB-Sicht</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_Kundensicht__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>(1-SomTv_BRKunde__c)*(1-SomTv_AEKopf_c__c)*(1-SomTv_SkontoKopf__c)/(1+SomTv_NRKunde__c+SomTv_SonderNR1Kunde__c+SomTv_Sonder_NR_2_Kunde__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield Kundensicht</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_RM_Sicht__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>(1- SomTv_BRRM__c)*(1-SomTv_AEKopf_c__c)*(1-SomTv_SkontoKopf__c)/(1 + SomTv_NRRM__c+ SomTv_SonderNRRM__c+ SomTV_Sonder_NR_2_RM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield RM-Sicht</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_Salessicht__c</fullName>
        <description>Yield, berechnet aus MN3/MB3</description>
        <formula>(1- SomTv_BR__c)*(1-SomTv_AEKopf_c__c)*(1-SomTv_SkontoKopf__c)/(1 + SomTv_NR__c+ SomTv_SonderNR1__c+ SomTv_Sonder_NR_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield, berechnet aus MN3/MB3</inlineHelpText>
        <label>Yield Salessicht</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_WarnungAngebot__c</fullName>
        <description>Zeigt an, ob das tatsächlich abzugebende Angebot innerhalb der freigegebenen Rabattsätze liegt.</description>
        <formula>if (AND(SomTv_YieldAngebot__c &lt;=  SomTv_Yield_DSB_Sicht__c, (ISNULL( SomTv_YieldAngebot__c ) &lt;&gt; True)),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;ausserhalb freigegebener Rabattsätze&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;im Rahmen der DSB-Freigabe&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt an, ob das tatsächlich abzugebende Angebot innerhalb der freigegebenen Rabattsätze liegt.</inlineHelpText>
        <label>Yield-Warnung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_Warnung_Bruttoermittlung__c</fullName>
        <formula>if (ROUND(SomTv_Yield_Angebot_Bruttoermittlung__c,2) &lt; ROUND(SomTv_Yield_DSB_Sicht__c,2),IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;ausserhalb freigegebener Rabattsätze&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;im Rahmen der DSB-Freigabe&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield-Warnung (B)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Yield_konsolidiert__c</fullName>
        <formula>SomTv_MN3_konsolidiert__c / SomTv_MB3_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YouTube__c</fullName>
        <description>Einschätzung des digitalen Display-Investments des Kunden bei der 7.1M</description>
        <inlineHelpText>Einschätzung des digitalen Display-Investments des Kunden bei der 7.1M</inlineHelpText>
        <label>YouTube</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Zielgruppen__c</fullName>
        <description>Angaben zur Zielgruppe</description>
        <inlineHelpText>Angaben zur Zielgruppe</inlineHelpText>
        <label>Zielgruppen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>somTv_Delegationsrahmen_Bruttoermittlung__c</fullName>
        <formula>if (ROUND(SomTv_Yield_Angebot_Bruttoermittlung__c,2) &lt; ROUND(SomTv_Yield_DSB_Sicht__c,2),&quot;ausserhalb freigegebener Rabattsätze&quot;, 
&quot;im Rahmen der DSB-Freigabe&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegationsrahmen (B)</label>
        <type>Text</type>
    </fields>
    <label>Angebot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SomTv_Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>SomTv_MB3_Bruttoermittlung__c</columns>
        <columns>SomTv_MB1_Bruttoermittlung__c</columns>
        <columns>SomTv_MN3_Bruttoermittlung__c</columns>
        <columns>SomTv_Yield_Bruttoermittlung__c</columns>
        <columns>SomTv_LAS__c</columns>
        <columns>SomTv_Status__c</columns>
        <columns>SomTv_OppPhaseFormel__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Letzte_Woche_erstellt</fullName>
        <columns>NAME</columns>
        <columns>SomTv_Aktuelle_Sicht__c</columns>
        <columns>SomTv_MB1_Angebot_Bruttoermittlung__c</columns>
        <columns>SomTv_MN1_Angebot_Bruttoermittlung__c</columns>
        <columns>SomTv_MN2_Angebot_Bruttoermittlung__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Letzte Woche erstellt</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Angebots-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Angebote</pluralLabel>
    <recordTypes>
        <fullName>SomTv_Brutto_Ermittlung</fullName>
        <active>true</active>
        <description>Berechnung von Netto nach Brutto</description>
        <label>MN3 Basis</label>
    </recordTypes>
    <recordTypes>
        <fullName>SomTv_Netto_Ermittlung</fullName>
        <active>true</active>
        <description>Berechnung von Brutto nach Netto</description>
        <label>MB1 Basis</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SomTv_IPEinschaetzungYield</fullName>
        <active>true</active>
        <description>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</description>
        <errorConditionFormula>SomTv_IPEinschaetzungYield__c &gt;1</errorConditionFormula>
        <errorDisplayField>SomTv_IPEinschaetzungYield__c</errorDisplayField>
        <errorMessage>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_Nur_RM_Rabatt_Freigeben</fullName>
        <active>true</active>
        <description>CRMSALES-1493: Der Angebotstatus „Rabatt freigegeben“ darf nicht von Sales gesetzt werden sondern nur von RM.</description>
        <errorConditionFormula>AND (ISPICKVAL(SomTv_Status__c,&quot;Rabatt freigegeben&quot;),    $Profile.Name &lt;&gt; &quot;SomTv_RM&quot;)</errorConditionFormula>
        <errorDisplayField>SomTv_Status__c</errorDisplayField>
        <errorMessage>Nur RM darf den Rabatt freigeben.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_PrintImMediamix</fullName>
        <active>true</active>
        <description>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</description>
        <errorConditionFormula>SomTv_PrintImMediamix__c     &gt;1</errorConditionFormula>
        <errorDisplayField>SomTv_PrintImMediamix__c</errorDisplayField>
        <errorMessage>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_TVimMediamix</fullName>
        <active>true</active>
        <description>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</description>
        <errorConditionFormula>SomTv_TVimMediamix__c    &gt;1</errorConditionFormula>
        <errorDisplayField>SomTv_TVimMediamix__c</errorDisplayField>
        <errorMessage>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_UniverseSize</fullName>
        <active>true</active>
        <description>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</description>
        <errorConditionFormula>SomTv_UniverseSize__c   &gt;1</errorConditionFormula>
        <errorDisplayField>SomTv_UniverseSize__c</errorDisplayField>
        <errorMessage>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_UniverseSoA</fullName>
        <active>true</active>
        <description>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</description>
        <errorConditionFormula>SomTv_UniverseSoA__c  &gt;1</errorConditionFormula>
        <errorDisplayField>SomTv_UniverseSoA__c</errorDisplayField>
        <errorMessage>Der maximale &quot;%-Satz&quot; darf 100,00% betragen</errorMessage>
    </validationRules>
</CustomObject>